# cwms-cli

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  maintainers.toml  pyproject.toml  release-please-config.json  report.html.j2  report.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  cwms.yml  feature-request.yml  getusgs.yml
.github/act/: pull_request.json
.github/workflows/: cli-tests.yml  code-check.yml  codeql.yml  docs.yml  pr-title-release-hint.yml  pypi-deploy.yml  release-please.yml  test-deploy.yml  test-deploy.yml.tmp
cwmscli/: __init__.py  __main__.py  ownership.py  requirements.py  utils.py
cwmscli/_generated/: __init__.py  ownership_data.py
cwmscli/callbacks/: __init__.py
cwmscli/commands/: blob.py  clob.py  commands_cwms.py  env.py  shef_critfile_import.py  users.py
cwmscli/cwms/: commands_cwms.py  shef_critfile_import.py
cwmscli/getusgs/: __getusgs_commands.py  commands_getusgs.py  getUSGS_CDA.py  getUSGS_ratings_CDA.py  get_USGS_measurements.py  rating_ini_file_import.py
cwmscli/load/: README.md  __main__.py  location_group.py  locations.py  root.py
cwmscli/reporting/: .gitignore  __init__.py  config.py  core.py  engines.py  models.py
cwmscli/usgs/: __init__.py  __main__.py  cda.py  commands_getusgs.py  getUSGS_ratings_cda.py  getugsg_cda.py  getusgs_cda.py  measurements_cda.py  (+3 more)
docs/: ENV_MANAGER.md  cli.rst  conf.py  index.rst  requirements.txt
scripts/: run-local-actions.sh  smoke_test_cli.py  sync_ownership.py
tests/: README.md  test_blob.py
(+122 files in other folders)
